fixed bottom gap

--- a/src/pages/Project/ProjectTeam.css
+++ b/src/pages/Project/ProjectTeam.css
@@ -2,6 +2,7 @@
 
 .project-subcontent-container {
     background-color: #FAFAFA;
+    margin-bottom: -38px;
 }
 
 body {
